--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,12 @@
 form.signup,
-form.login {
+form.login,
+form.petPost {
   margin-top: 50px;
+}
+
+.petPost {
+  box-shadow: 0px 0px 4px 4px #ccc;
+  -webkit-box-shadow: 0px 0px 4px 4px #ccc;
+  -moz-box-shadow: 0px 0px 4px 4px #ccc;
+
 }
