--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,26 +9,26 @@ form.petPost {
   -webkit-box-shadow: 0px 0px 4px 4px #ccc;
   -moz-box-shadow: 0px 0px 4px 4px #ccc;
 
-};
+}
 
 #page1{
  background-image: url(https://i.pinimg.com/originals/af/8b/4a/af8b4ae2596c629997277c4bf2cd0235.jpg);
  background-size: cover;
  
 
-};
+}
 
 
 #page1.h2{
 font-style: italic;
 
 
-};
+}
 
 #page2{
 
 
-};
+}
 
 
 #page3{
@@ -37,11 +37,10 @@ background-image: url(https://www.foremostmedia.com/portals/0/Images/services/on
 background-size: contain;
 background-repeat: no-repeat;
 
-};
+}
 
 #page4{
 background-image: url(https://i.pinimg.com/originals/5e/61/f3/5e61f36f1d3d817b8ffdb406ad59cc2c.gif);
 background-size: unset;
 background-repeat: no-repeat;
-
-};
+}
