--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,7 +26,7 @@ font-style: italic;
 }
 
 #page2{
-
+background-image: url(https://images.squarespace-cdn.com/content/v1/5d794bbb39bf6624d06d8db9/1569370327716-LHISRUAR81JA3NNY8RIN/ke17ZwdGBToddI8pDm48kIGCfKgzE7A8m0OQo9Qki4UUqsxRUqqbr1mOJYKfIPR7LoDQ9mXPOjoJoqy81S2I8N_N4V1vUb5AoIIIbLZhVYy7Mythp_T-mtop-vrsUOmeInPi9iDjx9w8K4ZfjXt2diXiAy5s7XJ4uGjaXufUmsHvfwj_y8tOPuoksvkcs3_bCjLISwBs8eEdxAxTptZAUg/dog-banner-with-yellow-background-2.png?format=2500w );
 
 }
 
