--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,6 +20,11 @@ form.petPost {
 font-style: italic;
 }
 
+#page2{
+background-image: url(https://previews.123rf.com/images/reamolko/reamolko1412/reamolko141200024/34211117-cheerful-domestic-animals-seamless-colorful-pattern-cat-dog-fish-bird-and-mouse-pet-shop-background-.jpg);
+
+}
+
 #page3{
 background-color: white;
 background-image: url(https://www.foremostmedia.com/portals/0/Images/services/online-marketing/social-media-marketing/social-media.png);
